--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,6 +9,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
+    background-color: #20B2AA;
 }
 
 .navbar{
@@ -108,14 +109,12 @@ a.activate,a:hover{
 }
 
 h1{
-    padding-top: 15%;
-    padding-left: 30%;
+    font-size: 2em;
+    text-align: center;
+    color: #197070;
+    padding: 1%;
+    font-weight: bold;
     font-family: 'Montserrat', sans-serif;
-    font-weight: bolder;
-    color: white;
-    font-size: 100px;
-
- 
 }
 
 
@@ -123,24 +122,25 @@ h1{
 h2{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    color: white;
+    text-align: center;
+    color: black;
     padding-top: 2.5%;
-    padding-left: 30%;
-    font-size: 34px;
+    padding: 1%;
+    font-size: 2em;
 }
 
 h3{
     padding-top: 5%;
     padding-bottom: 5%;
     padding-left: 5%;
-    color: #191970;
+    color: #197070;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 50px;
 }
 
 h4{
-    color: #191970;
+    color: #197070;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 25px;
@@ -180,13 +180,18 @@ p{
     padding-top: 30px;
 }
 
-.imgsobre{
-    
+.img{
     float: right;
     width: 50%;
     padding: 5%;
     padding-bottom: 10%;
+}
 
+.imgsobre{
+    float: right;
+    width: 50%;
+    padding: 3%;
+    padding-bottom: 10%;
 }
 
 .imgbeneficios{
@@ -195,4 +200,78 @@ p{
     padding: 5%;
     padding-bottom: 10%;
 
+}
+
+form{
+    box-sizing: border-box;
+}
+
+input[type=text], select, input[type=tel], input[type=email], textarea{
+    padding: 12px 20px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    width: 75%;
+    font-family: 'Caveat', cursive;
+}
+
+label{
+    width: 50%;
+    display: inline-block;
+    margin-left: 3%;
+    margin-bottom: 1%;
+}
+
+.form{
+    background-color: #197070;
+    border-radius: 5px;
+    padding: 20px;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.col-25{
+    width: 25%;
+    float: left;
+    margin-top: 6px;
+}
+
+.col-75{
+    width: 75%;
+    float: left;
+    margin-top: 6px;
+}
+
+input[type=submit] {
+    background-color: #20B2AA;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+  }
+
+  input[type=submit]:hover {
+      background-color: black;
+      font-weight: bolder;
+  }
+
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  @media screen and (max-width: 400px){
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+  }
+
+  .img_topo{
+    width: 100%;
 }
